--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Konfigurasi RPC Testnet
-RPC_URL=https://zenchain-testnet.api.onfinality.io/public
+RPC_URL=https://rpc-testnet.singularityfinance.ai
 
 # Akun Pertama
 ACCOUNT_ADDRESS_1=0xYourAddress1
